--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <input type="checkbox" id="agree" name="agree" required>
   <label for="agree">Eu li e concordo com o Termo de Concordância de Dados Pessoais</label><br>
 
-  <input type="submit" value="Enviar">
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2k9HGkLQhL9Omj-ooq2f7Cmps-7vUwY_BcV1Rer4ivsnlfg/viewform">
+    <button>Clique aqui</button>
+</a>
 </form>
 
