--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 
   Ao clicar em "Concordo", você confirma que leu e entendeu este Termo de Concordância de Dados Pessoais e concorda com a coleta, uso e armazenamento de seus dados pessoais conforme descrito.
   </textarea>
-  
-  <input type="checkbox" id="agree" name="agree" required>
-  <label for="agree">Eu li e concordo com o Termo de Concordância de Dados Pessoais</label><br>
+ 
 
  <form action="https://web.telegram.org/a/#887005411">
     
     </a>
     <br>
     <input type="checkbox" id="agree" name="agree">
-    <label for="agree">Eu concordo</label>
+    <label for="agree">Eu li e concordo com o Termo de Concordância de Dados Pessoais</label>
     <br>
     <input type="submit" value="Enviar">
 </form>
