--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </textarea>
  
 
- <form action="https://web.telegram.org/a/#887005411">
+ <form action="https://docs.google.com/forms/d/e/1FAIpQLSc2k9HGkLQhL9Omj-ooq2f7Cmps-7vUwY_BcV1Rer4ivsnlfg/viewform">
     
     </a>
     <br>
