--- a/index.html
+++ b/index.html
@@ -63,9 +63,21 @@
   input[type="submit"] {
     font-weight: bold;
   }
+
+  .logo-empresa {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 100px; /* ou o tamanho que preferir */
+  }
+
 </style>
 </head>
 <body>
+  
+<div class="logo-empresa">
+  <img src="SEU_LINK_AQUI" alt="Logo da Empresa">
+</div>
 
 <form action="https://docs.google.com/forms/d/e/1FAIpQLSc2k9HGkLQhL9Omj-ooq2f7Cmps-7vUwY_BcV1Rer4ivsnlfg/viewform">
   <h2>Formulário de Inscrição</h2>
