--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </div>
 
 <form action="https://docs.google.com/forms/d/e/1FAIpQLSc2k9HGkLQhL9Omj-ooq2f7Cmps-7vUwY_BcV1Rer4ivsnlfg/viewform">
-  <h2>Formulário de Inscrição</h2>
+  <h2>Formulário de envio de dados</h2>
   
   <!-- Aqui você pode colocar os campos do seu formulário -->
 
