--- a/index.html
+++ b/index.html
@@ -117,23 +117,15 @@ body {
 
   <h3>Termo de Concordância de Dados Pessoais</h3>
   <textarea readonly>
-    Ao preencher este formulário, você concorda com a coleta, armazenamento e processamento de seus dados pessoais pela nossa empresa conforme descrito em nossa Política de Privacidade.
-
-  1. Coleta de Dados: Coletamos os dados que você fornece neste formulário. Isso pode incluir, mas não se limita a, seu nome, endereço de e-mail, número de telefone e qualquer outra informação que você escolher fornecer.
-
-  2. Uso de Dados: Usamos seus dados para responder às suas consultas, fornecer nossos serviços e melhorar a sua experiência conosco.
-
-  3. Compartilhamento de Dados: Não compartilhamos seus dados com terceiros sem o seu consentimento explícito, exceto quando necessário para fornecer nossos serviços ou cumprir a lei.
-
-  4. Segurança de Dados: Implementamos medidas de segurança robustas para proteger seus dados. Seus dados são criptografados e armazenados em servidores seguros.
-
-  5. Direitos do Usuário: Você tem o direito de acessar, corrigir ou excluir seus dados a qualquer momento. Por favor, entre em contato conosco se desejar exercer esses direitos.
-
-  Ao clicar em "Concordo", você confirma que leu e entendeu este Termo de Concordância de Dados Pessoais e concorda com a coleta, uso e armazenamento de seus dados pessoais conforme descrito.
+    colaborador, mediante estes termos, responsabiliza-se pelo uso e conservação do equipamento “Coletor Zebra,
+    de propriedade de Mateus Supermercado LTDA – Filial 04-Goiás” pelo prazo de expediente, a contar desta data, 
+    e comprometendo-se a devolvê-lo (s) em estado atual até o fim deste prazo.
+    Em caso de extravio e/ou dano, total ou parcial, do material retirado,
+    fica obrigado (o) a ressarcir o proprietário dos prejuízos decorrentes.
   </textarea>
 
   <input type="checkbox" id="agree" name="agree">
-  <label for="agree">Eu li e concordo com o Termo de Concordância de Dados Pessoais</label>
+  <label for="agree">Eu li e concordo com o Termo de Concordância</label>
 
   <input type="submit" value="Enviar" class="btn-enviar">
 </form>
