--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@ body {
   <img src="https://www.cpdverificationservice.com/uploads/1/2/6/8/126857925/cropped-cpd-logo-clear-1.png" width="100" height="100" alt="Logo da Empresa">
 </div>
 
-<form action="https://docs.google.com/forms/d/e/1FAIpQLSc2k9HGkLQhL9Omj-ooq2f7Cmps-7vUwY_BcV1Rer4ivsnlfg/viewform">
-  <h2>Formulário de envio de dados</h2>
+<form action="https://joabsm.github.io/suportecpd/">
+  <h2>Mediante estes termos</h2>
   
   <!-- Aqui você pode colocar os campos do seu formulário -->
 
-  <h3>Termo de Concordância de Dados Pessoais</h3>
+  <h3>responsabiliza-se pelo uso e conservação do equipamento</h3>
   <textarea readonly>
     colaborador, mediante estes termos, responsabiliza-se pelo uso e conservação do equipamento “Coletor Zebra,
     de propriedade de Mateus Supermercado LTDA – Filial 04-Goiás” pelo prazo de expediente, a contar desta data, 
