--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="https://www.cpdverificationservice.com/uploads/1/2/6/8/126857925/cropped-cpd-logo-clear-1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
+  <title>COLETORES</title>
   <style>
     /body {
     font-family: Arial, sans-serif;
