--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="https://www.cpdverificationservice.com/uploads/1/2/6/8/126857925/cropped-cpd-logo-clear-1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-  <title>COLETORES</title>
+  <title>TERMOS</title>
   <style>
     /body {
     font-family: Arial, sans-serif;
